docs:登录页更新、页面名称更新、查询器新增传参方式更新

--- a/src/styles/kyscss/ky-elementui.scss
+++ b/src/styles/kyscss/ky-elementui.scss
@@ -258,3 +258,17 @@
 // .ky-iptwsm{
 //   width: $iptwsm;
 // }
+.ky-btntxt-danger{
+  color: #f56c6c;
+}
+.ky-btntxt-danger:hover{
+  color: #f56c6c;
+  opacity: 0.8;
+}
+.ky-btntxt-warning{
+  color: #e6a23c;
+}
+.ky-btntxt-warning:hover{
+  color: #e6a23c;
+  opacity: 0.8;
+}
